# kubectx-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: main.rs
